// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offers_cell block empty 1`] = `
Object {
  "backgroundColor": "FFFFFF",
  "backgroundColorDark": "1C1C1E",
  "backgroundColorID": 45,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "flex": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "name": "text",
              "text": "Нет объявлений на Авто.ру",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "fontSize": 14,
                  "name": "text",
                  "onTap": undefined,
                  "text": "Обновлено 17 марта 2020",
                  "textColor": "80000000",
                  "textColorDark": "98FFFFFF",
                  "textColorID": 48,
                },
              ],
              "margin": "{3, 0, 0, 0}",
              "name": "stack",
            },
          ],
          "flex": 1,
          "flexDirection": "column",
          "name": "stack",
          "padding": "{0, 24, 0, 24}",
        },
        Object {
          "name": "ignore",
        },
      ],
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "alignItems": "center",
          "children": Array [
            Object {
              "height": "150",
              "margin": "{30, 0, 50, 0}",
              "name": "image",
              "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/offers/light.png",
              "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/offers/dark.png",
              "width": "157",
            },
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "aspectRatio": "1",
                  "contentMode": "scaleAspectFit",
                  "height": "20",
                  "margin": "{0, 0, 0, 16}",
                  "name": "image",
                  "url": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png",
                  "urlDark": "https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png",
                },
                Object {
                  "fontSize": "14",
                  "margin": "{0, 0, 0, 24}",
                  "name": "text",
                  "text": "Автомобиль раньше не продавался на Авто.ру",
                  "textColor": "000000",
                  "textColorDark": "FFFFFF",
                  "textColorID": 47,
                },
              ],
              "flexDirection": "row",
              "minHeight": 56,
              "name": "stack",
              "padding": "{0, 24, 24, 24}",
              "width": "100%",
            },
          ],
          "flexDirection": "column",
          "name": "stack",
        },
      ],
      "flexDirection": "column",
      "name": "stack",
    },
  ],
  "cornerRadius": "24",
  "flexDirection": "column",
  "id": "offers",
  "margin": "{0, 0, 16, 0}",
  "name": "stack",
  "padding": "{24, 0, 0, 0}",
}
`;

exports[`offers_cell block empty 2`] = `"<list><stack backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" cornerRadius=\\"24\\" flexDirection=\\"column\\" id=\\"offers\\" margin=\\"{0, 0, 16, 0}\\" padding=\\"{24, 0, 0, 0}\\"><stack><stack flexDirection=\\"column\\" padding=\\"{0, 24, 0, 24}\\" flex=\\"1\\"><text flex=\\"1\\" fontSize=\\"24\\" fontWeight=\\"bold\\" text=\\"Нет объявлений на Авто.ру\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack margin=\\"{3, 0, 0, 0}\\" alignItems=\\"center\\"><ignore/><text fontSize=\\"14\\" text=\\"Обновлено 17 марта 2020\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack><ignore/></stack><stack flexDirection=\\"column\\"><stack flexDirection=\\"column\\" alignItems=\\"center\\"><image width=\\"157\\" height=\\"150\\" margin=\\"{30, 0, 50, 0}\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/offers/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/offers/dark.png\\"/><stack width=\\"100%\\" flexDirection=\\"row\\" alignItems=\\"center\\" minHeight=\\"56\\" padding=\\"{0, 24, 24, 24}\\"><image aspectRatio=\\"1\\" contentMode=\\"scaleAspectFit\\" height=\\"20\\" url=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/light.png\\" urlDark=\\"https://yastatic.net/s3/vertis-frontend/autoru-mobile/carfax-icons/android/checked/dark.png\\" margin=\\"{0, 0, 0, 16}\\"/><text margin=\\"{0, 0, 0, 24}\\" fontSize=\\"14\\" text=\\"Автомобиль раньше не&#160;продавался на&#160;Авто.ру\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack></stack></stack></stack></list>"`;

exports[`offers_cell block exist 1`] = `
Object {
  "backgroundColor": "FFFFFF",
  "backgroundColorDark": "1C1C1E",
  "backgroundColorID": 45,
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "flex": 1,
              "fontSize": 24,
              "fontWeight": "bold",
              "name": "text",
              "text": "3 объявления на Авто.ру",
              "textColor": "000000",
              "textColorDark": "FFFFFF",
              "textColorID": 47,
            },
            Object {
              "alignItems": "center",
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "fontSize": 14,
                  "name": "text",
                  "onTap": undefined,
                  "text": "Обновлено 5 июня 2020",
                  "textColor": "80000000",
                  "textColorDark": "98FFFFFF",
                  "textColorID": 48,
                },
              ],
              "margin": "{3, 0, 0, 0}",
              "name": "stack",
            },
          ],
          "flex": 1,
          "flexDirection": "column",
          "name": "stack",
          "padding": "{0, 24, 0, 24}",
        },
        Object {
          "name": "ignore",
        },
      ],
      "name": "stack",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "name": "ignore",
            },
            Object {
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "name": "ignore",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Дата",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "12 сентября 2019",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Пробег",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "9 511 км",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Регион",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "Сочи",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "name": "ignore",
                },
              ],
              "flexDirection": "column",
              "margin": "{0, 24, 8, 24}",
              "name": "stack",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "E2EFFD",
              "backgroundColorDark": "636366",
              "backgroundColorID": 52,
              "children": Array [
                Object {
                  "fontSize": "14",
                  "fontWeight": "semibold",
                  "margin": "{0, 0, 2, 0}",
                  "name": "text",
                  "text": "Смотреть объявление",
                  "textColor": "0C78ED",
                  "textColorDark": "FFFFFF",
                  "textColorID": 53,
                },
              ],
              "cornerRadius": "12",
              "height": "48",
              "id": "btn_show_offer_1091684546-ce539e5c",
              "justifyContent": "center",
              "margin": "{0, 24, 0, 24}",
              "name": "stack",
            },
            Object {
              "name": "ignore",
            },
          ],
          "flexDirection": "column",
          "name": "stack",
          "onTap": "https://auto.ru/cars/used/sale/1091684546-ce539e5c/",
          "padding": "{24, 0, 24, 0}",
        },
        Object {
          "backgroundColor": "1A000000",
          "backgroundColorDark": "1AFFFFFF",
          "backgroundColorID": 45,
          "height": "1",
          "margin": "{0,24,0,24}",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "name": "ignore",
            },
            Object {
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Цена",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "5 954 000 ₽",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Дата",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "19 марта 2020",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Пробег",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "9 511 км",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Регион",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "Москва",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "name": "ignore",
                },
              ],
              "flexDirection": "column",
              "margin": "{0, 24, 8, 24}",
              "name": "stack",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "E2EFFD",
              "backgroundColorDark": "636366",
              "backgroundColorID": 52,
              "children": Array [
                Object {
                  "fontSize": "14",
                  "fontWeight": "semibold",
                  "margin": "{0, 0, 2, 0}",
                  "name": "text",
                  "text": "Смотреть объявление",
                  "textColor": "0C78ED",
                  "textColorDark": "FFFFFF",
                  "textColorID": 53,
                },
              ],
              "cornerRadius": "12",
              "height": "48",
              "id": "btn_show_offer_1096920492-7ee34a72",
              "justifyContent": "center",
              "margin": "{0, 24, 0, 24}",
              "name": "stack",
            },
            Object {
              "name": "ignore",
            },
          ],
          "flexDirection": "column",
          "name": "stack",
          "onTap": "https://auto.ru/cars/used/sale/1096920492-7ee34a72/",
          "padding": "{24, 0, 24, 0}",
        },
        Object {
          "backgroundColor": "1A000000",
          "backgroundColorDark": "1AFFFFFF",
          "backgroundColorID": 45,
          "height": "1",
          "margin": "{0,24,0,24}",
          "name": "stack",
        },
        Object {
          "children": Array [
            Object {
              "name": "ignore",
            },
            Object {
              "children": Array [
                Object {
                  "name": "ignore",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Цена",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "5 954 000 ₽",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Дата",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "26 мая 2020",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Пробег",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "9 511 км",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "children": Array [
                    Object {
                      "flex": "0.3",
                      "fontSize": "14",
                      "margin": "{0, 0, 0, 16}",
                      "name": "text",
                      "text": "Регион",
                      "textColor": "80000000",
                      "textColorDark": "98FFFFFF",
                      "textColorID": 48,
                    },
                    Object {
                      "flex": "0.7",
                      "fontSize": "14",
                      "name": "text",
                      "text": "Сочи",
                      "textColor": "000000",
                      "textColorDark": "FFFFFF",
                      "textColorID": 47,
                    },
                  ],
                  "flex": "1",
                  "flexDirection": "row",
                  "name": "stack",
                  "padding": "{0, 0, 4, 0}",
                },
                Object {
                  "name": "ignore",
                },
              ],
              "flexDirection": "column",
              "margin": "{0, 24, 8, 24}",
              "name": "stack",
            },
            Object {
              "alignItems": "center",
              "backgroundColor": "E2EFFD",
              "backgroundColorDark": "636366",
              "backgroundColorID": 52,
              "children": Array [
                Object {
                  "fontSize": "14",
                  "fontWeight": "semibold",
                  "margin": "{0, 0, 2, 0}",
                  "name": "text",
                  "text": "Смотреть объявление",
                  "textColor": "0C78ED",
                  "textColorDark": "FFFFFF",
                  "textColorID": 53,
                },
              ],
              "cornerRadius": "12",
              "height": "48",
              "id": "btn_show_offer_1098329048-59d2bd69",
              "justifyContent": "center",
              "margin": "{0, 24, 0, 24}",
              "name": "stack",
            },
            Object {
              "name": "ignore",
            },
          ],
          "flexDirection": "column",
          "name": "stack",
          "onTap": "https://auto.ru/cars/used/sale/1098329048-59d2bd69/",
          "padding": "{24, 0, 24, 0}",
        },
      ],
      "flexDirection": "column",
      "name": "stack",
    },
  ],
  "cornerRadius": "24",
  "flexDirection": "column",
  "id": "offers",
  "margin": "{0, 0, 16, 0}",
  "name": "stack",
  "padding": "{24, 0, 0, 0}",
}
`;

exports[`offers_cell block exist 2`] = `"<list><stack backgroundColor=\\"FFFFFF\\" backgroundColorDark=\\"1C1C1E\\" backgroundColorID=\\"45\\" cornerRadius=\\"24\\" flexDirection=\\"column\\" id=\\"offers\\" margin=\\"{0, 0, 16, 0}\\" padding=\\"{24, 0, 0, 0}\\"><stack><stack flexDirection=\\"column\\" padding=\\"{0, 24, 0, 24}\\" flex=\\"1\\"><text flex=\\"1\\" fontSize=\\"24\\" fontWeight=\\"bold\\" text=\\"3 объявления на Авто.ру\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/><stack margin=\\"{3, 0, 0, 0}\\" alignItems=\\"center\\"><ignore/><text fontSize=\\"14\\" text=\\"Обновлено 5 июня 2020\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/></stack></stack><ignore/></stack><stack flexDirection=\\"column\\"><stack flexDirection=\\"column\\" onTap=\\"https://auto.ru/cars/used/sale/1091684546-ce539e5c/\\" padding=\\"{24, 0, 24, 0}\\"><ignore/><stack flexDirection=\\"column\\" margin=\\"{0, 24, 8, 24}\\"><ignore/><ignore/><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Дата\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"12 сентября 2019\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Пробег\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"9&#160;511&#160;км\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Регион\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Сочи\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><ignore/></stack><stack alignItems=\\"center\\" backgroundColor=\\"E2EFFD\\" backgroundColorDark=\\"636366\\" backgroundColorID=\\"52\\" cornerRadius=\\"12\\" height=\\"48\\" id=\\"btn_show_offer_1091684546-ce539e5c\\" justifyContent=\\"center\\" margin=\\"{0, 24, 0, 24}\\"><text fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{0, 0, 2, 0}\\" text=\\"Смотреть объявление\\" textColor=\\"0C78ED\\" textColorDark=\\"FFFFFF\\" textColorID=\\"53\\"/></stack><ignore/></stack><stack backgroundColor=\\"1A000000\\" backgroundColorDark=\\"1AFFFFFF\\" backgroundColorID=\\"45\\" height=\\"1\\" margin=\\"{0,24,0,24}\\"/><stack flexDirection=\\"column\\" onTap=\\"https://auto.ru/cars/used/sale/1096920492-7ee34a72/\\" padding=\\"{24, 0, 24, 0}\\"><ignore/><stack flexDirection=\\"column\\" margin=\\"{0, 24, 8, 24}\\"><ignore/><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Цена\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"5&#160;954&#160;000&#160;₽\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Дата\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"19 марта 2020\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Пробег\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"9&#160;511&#160;км\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Регион\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Москва\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><ignore/></stack><stack alignItems=\\"center\\" backgroundColor=\\"E2EFFD\\" backgroundColorDark=\\"636366\\" backgroundColorID=\\"52\\" cornerRadius=\\"12\\" height=\\"48\\" id=\\"btn_show_offer_1096920492-7ee34a72\\" justifyContent=\\"center\\" margin=\\"{0, 24, 0, 24}\\"><text fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{0, 0, 2, 0}\\" text=\\"Смотреть объявление\\" textColor=\\"0C78ED\\" textColorDark=\\"FFFFFF\\" textColorID=\\"53\\"/></stack><ignore/></stack><stack backgroundColor=\\"1A000000\\" backgroundColorDark=\\"1AFFFFFF\\" backgroundColorID=\\"45\\" height=\\"1\\" margin=\\"{0,24,0,24}\\"/><stack flexDirection=\\"column\\" onTap=\\"https://auto.ru/cars/used/sale/1098329048-59d2bd69/\\" padding=\\"{24, 0, 24, 0}\\"><ignore/><stack flexDirection=\\"column\\" margin=\\"{0, 24, 8, 24}\\"><ignore/><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Цена\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"5&#160;954&#160;000&#160;₽\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Дата\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"26 мая 2020\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Пробег\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"9&#160;511&#160;км\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><stack flex=\\"1\\" flexDirection=\\"row\\" padding=\\"{0, 0, 4, 0}\\"><text flex=\\"0.3\\" fontSize=\\"14\\" text=\\"Регион\\" margin=\\"{0, 0, 0, 16}\\" textColor=\\"80000000\\" textColorDark=\\"98FFFFFF\\" textColorID=\\"48\\"/><text flex=\\"0.7\\" fontSize=\\"14\\" text=\\"Сочи\\" textColor=\\"000000\\" textColorDark=\\"FFFFFF\\" textColorID=\\"47\\"/></stack><ignore/></stack><stack alignItems=\\"center\\" backgroundColor=\\"E2EFFD\\" backgroundColorDark=\\"636366\\" backgroundColorID=\\"52\\" cornerRadius=\\"12\\" height=\\"48\\" id=\\"btn_show_offer_1098329048-59d2bd69\\" justifyContent=\\"center\\" margin=\\"{0, 24, 0, 24}\\"><text fontSize=\\"14\\" fontWeight=\\"semibold\\" margin=\\"{0, 0, 2, 0}\\" text=\\"Смотреть объявление\\" textColor=\\"0C78ED\\" textColorDark=\\"FFFFFF\\" textColorID=\\"53\\"/></stack><ignore/></stack></stack></stack></list>"`;
